--- a/Resources/CSS/style.css
+++ b/Resources/CSS/style.css
@@ -256,6 +256,23 @@ header {
 .main-nav li a:hover,
 .main-nav li a:active { border-bottom: 2px solid #e67e22; }
 
+/* Mobile Navi */
+
+.mobile-nav-icon {
+    float: right;
+    margin-top: 30px;
+    cursor: pointer;
+    display: none;
+
+}
+
+.mobile-nav-icon i {
+    font-size: 200%;
+    color: #FFF;
+}
+
+
+
 /* Sticky Navi */
 
 .sticky {
@@ -581,10 +598,19 @@ footer p {
 /* ANIMATIONS */
 /*--------------------------------------*/
 
-.js--wp-1 {
+.js--wp-1,
+.js--wp-2,
+.js--wp-3 {
     opacity: 0;
+    animation-duration: 1s;
 }
 
-.js--wp-1.animated {
+.js--wp-4 {
+    animation-duration: 1s;
+}
+
+.js--wp-1.animated,
+.js--wp-2.animated,
+.js--wp-3.animated {
     opacity: 1;
 }
